feat: finalisation des models et controllers de base

--- a/APIMarcheEtDeviens/APIMarcheEtDeviens/appsettings.json
+++ b/APIMarcheEtDeviens/APIMarcheEtDeviens/appsettings.json
@@ -6,7 +6,7 @@
         }
     },
     "ConnectionStrings": {
-        "DefaultValue": "server=127.0.0.1;database=repertoire2;user=root;password="
+        "DefaultValue": "server=127.0.0.1;database=APIMarcheEtDeviens;user=root;password="
     },
     "AllowedHosts": "*"
 }
