fix(.gitignore): rétablie le gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
-﻿./APIMarcheEtDeviens/APIMarcheEtDeviens/obj/Debug/net8.0/
+﻿/APIMarcheEtDeviens/APIMarcheEtDeviens/obj/Debug/net8.0/
+/.vs/
+/APIMarcheEtDeviens/.vs/
