--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-﻿/APIMarcheEtDeviens/APIMarcheEtDeviens/obj/Debug/net8.0/
+﻿/APIMarcheEtDeviens/APIMarcheEtDeviens/obj/
 /.vs/
 /APIMarcheEtDeviens/.vs/
