fix: ajout bin au gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 ﻿/APIMarcheEtDeviens/APIMarcheEtDeviens/obj/Debug/net8.0/
 /.vs/
 /APIMarcheEtDeviens/.vs/
+/APIMarcheEtDeviens/APIMarcheEtDeviens/bin/
