feat: ajout du début du JWT pour la connexion est l'inscription

--- a/APIMarcheEtDeviens/APIMarcheEtDeviens/appsettings.json
+++ b/APIMarcheEtDeviens/APIMarcheEtDeviens/appsettings.json
@@ -1,12 +1,13 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "ConnectionStrings": {
-        "DefaultValue": "server=127.0.0.1;database=APIMarcheEtDeviens;user=root;password="
-    },
-    "AllowedHosts": "*"
+  "Token": "This is my secret key which is beautifull key with 64 bit length",
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "ConnectionStrings": {
+    "DefaultValue": "server=127.0.0.1;database=APIMarcheEtDeviens;user=root;password="
+  },
+  "AllowedHosts": "*"
 }
