fix: commit conflict between repos

--- a/APIMarcheEtDeviens/APIMarcheEtDeviens/appsettings.json
+++ b/APIMarcheEtDeviens/APIMarcheEtDeviens/appsettings.json
@@ -6,7 +6,7 @@
         }
     },
     "ConnectionStrings": {
-        "DefaultValue": "server=127.0.0.1;database=APIMarcheEtDeviens;user=root;password="
+        "DefaultValue": "server=localhost;database=MarcheEtDeviens;user=root;password=root;"
     },
     "AllowedHosts": "*"
 }
