--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,169 @@
-﻿/APIMarcheEtDeviens/APIMarcheEtDeviens/obj/
+﻿.DS_STORE
+
+/FRONTMarcheEtDevenir/dist/
+/FRONTMarcheEtDevenir/bazel-out
+/FRONTMarcheEtDevenir/integration/bazel/bazel-*
+/FRONTMarcheEtDevenir/*.log
+/FRONTMarcheEtDevenir/node_modules/
+
+# CircleCI temporary file for cache key computation.
+# See `save_month_to_file` in `.circleci/config.yml`.
+/FRONTMarcheEtDevenir/month.txt
+
+# Include when developing application packages.
+/FRONTMarcheEtDevenir/pubspec.lock
+/FRONTMarcheEtDevenir/.c9
+/FRONTMarcheEtDevenir/.idea/
+/FRONTMarcheEtDevenir/.devcontainer/*
+/FRONTMarcheEtDevenir/!.devcontainer/README.md
+/FRONTMarcheEtDevenir/!.devcontainer/recommended-devcontainer.json
+/FRONTMarcheEtDevenir/!.devcontainer/recommended-Dockerfile
+/FRONTMarcheEtDevenir/.settings/
+/FRONTMarcheEtDevenir/.vscode/launch.json
+/FRONTMarcheEtDevenir/.vscode/settings.json
+/FRONTMarcheEtDevenir/.vscode/tasks.json
+/FRONTMarcheEtDevenir/*.swo
+/FRONTMarcheEtDevenir/*.swp
+/FRONTMarcheEtDevenir/modules/.settings
+/FRONTMarcheEtDevenir/modules/.vscode
+/FRONTMarcheEtDevenir/.vimrc
+/FRONTMarcheEtDevenir/.nvimrc
+
+# Don't check in secret files
+/FRONTMarcheEtDevenir/*secret.js
+
+# Ignore npm/yarn debug log
+/FRONTMarcheEtDevenir/npm-debug.log
+/FRONTMarcheEtDevenir/yarn-error.log
+
+# build-analytics
+/FRONTMarcheEtDevenir/.build-analytics
+
+# rollup-test output
+/FRONTMarcheEtDevenir/modules/rollup-test/dist/
+
+# User specific bazel settings
+/FRONTMarcheEtDevenir/.bazelrc.user
+
+# User specific ng-dev settings
+/FRONTMarcheEtDevenir/.ng-dev.user*
+
+/FRONTMarcheEtDevenir/.notes.md
+/FRONTMarcheEtDevenir/baseline.json
+
+# Ignore .history for the xyz.local-history VSCode extension
+/FRONTMarcheEtDevenir/.history
+
+# Husky
+/FRONTMarcheEtDevenir/.husky/_
+
+
+# Ignore cache created with the Angular CLI.
+/FRONTMarcheEtDevenir/.angular/
+
+# Ignore AIO files, useful when changing branches 
+aio/node_modules
+/FRONTMarcheEtDevenir/aio/out-tsc
+
+/APIMarcheEtDeviens/APIMarcheEtDeviens/obj/
 /.vs/
 /APIMarcheEtDeviens/.vs/
 /APIMarcheEtDeviens/APIMarcheEtDeviens/bin/
+./APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/APIMarcheEtDeviens.deps.json
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/APIMarcheEtDeviens.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/APIMarcheEtDeviens.pdb
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/appsettings.json
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/BouncyCastle.Cryptography.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/Google.Protobuf.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/Humanizer.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/K4os.Compression.LZ4.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/K4os.Compression.LZ4.Streams.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/K4os.Hash.xxHash.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/Microsoft.Bcl.AsyncInterfaces.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/Microsoft.CodeAnalysis.CSharp.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/Microsoft.CodeAnalysis.CSharp.Workspaces.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/Microsoft.CodeAnalysis.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/Microsoft.CodeAnalysis.Workspaces.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/Microsoft.EntityFrameworkCore.Abstractions.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/Microsoft.EntityFrameworkCore.Design.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/Microsoft.EntityFrameworkCore.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/Microsoft.EntityFrameworkCore.Relational.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/Microsoft.Extensions.DependencyModel.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/Microsoft.OpenApi.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/Mono.TextTemplating.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/MySql.Data.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/MySql.EntityFrameworkCore.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/Swashbuckle.AspNetCore.Swagger.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/Swashbuckle.AspNetCore.SwaggerGen.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/Swashbuckle.AspNetCore.SwaggerUI.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/System.CodeDom.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/System.Composition.AttributedModel.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/System.Composition.Convention.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/System.Composition.Hosting.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/System.Composition.Runtime.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/System.Composition.TypedParts.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/System.Configuration.ConfigurationManager.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/System.Security.Cryptography.ProtectedData.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/System.Security.Permissions.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/System.Windows.Extensions.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/ZstdSharp.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/cs/Microsoft.CodeAnalysis.CSharp.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/cs/Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/cs/Microsoft.CodeAnalysis.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/cs/Microsoft.CodeAnalysis.Workspaces.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/de/Microsoft.CodeAnalysis.CSharp.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/de/Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/de/Microsoft.CodeAnalysis.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/de/Microsoft.CodeAnalysis.Workspaces.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/es/Microsoft.CodeAnalysis.CSharp.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/es/Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/es/Microsoft.CodeAnalysis.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/es/Microsoft.CodeAnalysis.Workspaces.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/fr/Microsoft.CodeAnalysis.CSharp.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/fr/Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/fr/Microsoft.CodeAnalysis.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/fr/Microsoft.CodeAnalysis.Workspaces.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/it/Microsoft.CodeAnalysis.CSharp.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/it/Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/it/Microsoft.CodeAnalysis.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/it/Microsoft.CodeAnalysis.Workspaces.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/ja/Microsoft.CodeAnalysis.CSharp.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/ja/Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/ja/Microsoft.CodeAnalysis.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/ja/Microsoft.CodeAnalysis.Workspaces.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/ko/Microsoft.CodeAnalysis.CSharp.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/ko/Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/ko/Microsoft.CodeAnalysis.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/ko/Microsoft.CodeAnalysis.Workspaces.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/pl/Microsoft.CodeAnalysis.CSharp.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/pl/Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/pl/Microsoft.CodeAnalysis.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/pl/Microsoft.CodeAnalysis.Workspaces.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/pt-BR/Microsoft.CodeAnalysis.CSharp.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/pt-BR/Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/pt-BR/Microsoft.CodeAnalysis.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/pt-BR/Microsoft.CodeAnalysis.Workspaces.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/ru/Microsoft.CodeAnalysis.CSharp.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/ru/Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/ru/Microsoft.CodeAnalysis.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/ru/Microsoft.CodeAnalysis.Workspaces.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/runtimes/win/lib/net8.0/System.Windows.Extensions.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/runtimes/win-x64/native/comerr64.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/runtimes/win-x64/native/gssapi64.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/runtimes/win-x64/native/k5sprt64.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/runtimes/win-x64/native/krb5_64.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/runtimes/win-x64/native/krbcc64.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/tr/Microsoft.CodeAnalysis.CSharp.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/tr/Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/tr/Microsoft.CodeAnalysis.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/tr/Microsoft.CodeAnalysis.Workspaces.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/zh-Hans/Microsoft.CodeAnalysis.CSharp.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/zh-Hans/Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/zh-Hans/Microsoft.CodeAnalysis.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/zh-Hans/Microsoft.CodeAnalysis.Workspaces.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/zh-Hant/Microsoft.CodeAnalysis.CSharp.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/zh-Hant/Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/zh-Hant/Microsoft.CodeAnalysis.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/zh-Hant/Microsoft.CodeAnalysis.Workspaces.resources.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/appsettings.json
