--- a/.gitignore
+++ b/.gitignore
@@ -168,3 +168,5 @@ APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/zh-Hant/Microsoft.CodeAna
 APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/zh-Hant/Microsoft.CodeAnalysis.Workspaces.resources.dll
 APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/appsettings.json
 FrontMarcheEtDevenir/package-lock.json
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/APIMarcheEtDeviens.dll
+APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/appsettings.json
