--- a/APIMarcheEtDeviens/APIMarcheEtDeviens/appsettings.json
+++ b/APIMarcheEtDeviens/APIMarcheEtDeviens/appsettings.json
@@ -1,13 +1,13 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "ConnectionStrings": {
-        "DefaultValue": "server=127.0.0.1;database=APIMarcheEtDeviens;user=root;password="
-    },
-    "AllowedHosts": "*"
- 
+  "Token": "Ceci est ma cle tres secrete et qui est indetectable trop class  ",
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "ConnectionStrings": {
+    "DefaultValue": "server=127.0.0.1;database=APIMarcheEtDeviens;user=root;password="
+  },
+  "AllowedHosts": "*"
 }
