feat: modification du gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -173,3 +173,5 @@ FrontMarcheEtDevenir/package-lock.json
 APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/APIMarcheEtDeviens.dll
 APIMarcheEtDeviens/APIMarcheEtDeviens/bin/Debug/net8.0/appsettings.json
 
+
+./FrontMarcheEtDevenir/Ressources/
